[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu/ButtonQuitGame.gd" type="Script" id=1]
[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
path_menu_connection = NodePath("MenuConnection")
path_username_input = NodePath("MenuConnection/VBox1/Name")
path_ip_input = NodePath("MenuConnection/VBox1/IPAddress")
path_button_host = NodePath("MenuConnection/VBox1/HBox1/Host")
path_button_join = NodePath("MenuConnection/VBox1/HBox1/Join")
path_error_label = NodePath("MenuConnection/VBox1/ErrorLabel")
path_button_quit = NodePath("MenuConnection/VBox1/HBox2/QuitGame")
path_menu_lobby = NodePath("MenuLobby")
path_lobby_list = NodePath("MenuLobby/List")
path_button_start = NodePath("MenuLobby/Start")
path_error_dialog = NodePath("ErrorDialog")

[node name="MenuConnection" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -160.0
margin_right = 240.0
margin_bottom = 160.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox1" type="VBoxContainer" parent="MenuConnection"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="MenuConnection/VBox1"]
margin_right = 42.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="MenuConnection/VBox1"]
margin_top = 29.0
margin_right = 460.0
margin_bottom = 69.0
rect_min_size = Vector2( 320, 40 )
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Player1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="MenuConnection/VBox1"]
margin_top = 73.0
margin_right = 40.0
margin_bottom = 98.0
rect_min_size = Vector2( 40, 25 )
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddress" type="LineEdit" parent="MenuConnection/VBox1"]
margin_top = 102.0
margin_right = 460.0
margin_bottom = 142.0
rect_min_size = Vector2( 320, 40 )
size_flags_horizontal = 3
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magin1" type="MarginContainer" parent="MenuConnection/VBox1"]
margin_top = 146.0
margin_right = 460.0
margin_bottom = 155.0
size_flags_vertical = 3

[node name="HBox1" type="HBoxContainer" parent="MenuConnection/VBox1"]
margin_top = 159.0
margin_right = 460.0
margin_bottom = 199.0

[node name="Magin2" type="MarginContainer" parent="MenuConnection/VBox1/HBox1"]
margin_right = 68.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Host" type="Button" parent="MenuConnection/VBox1/HBox1"]
margin_left = 72.0
margin_right = 192.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magin3" type="MarginContainer" parent="MenuConnection/VBox1/HBox1"]
margin_left = 196.0
margin_right = 264.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Join" type="Button" parent="MenuConnection/VBox1/HBox1"]
margin_left = 268.0
margin_right = 388.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magin4" type="MarginContainer" parent="MenuConnection/VBox1/HBox1"]
margin_left = 392.0
margin_right = 460.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorLabel" type="Label" parent="MenuConnection/VBox1"]
margin_top = 203.0
margin_right = 460.0
margin_bottom = 243.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magin5" type="MarginContainer" parent="MenuConnection/VBox1"]
margin_top = 247.0
margin_right = 460.0
margin_bottom = 256.0
size_flags_vertical = 3

[node name="HBox2" type="HBoxContainer" parent="MenuConnection/VBox1"]
margin_top = 260.0
margin_right = 460.0
margin_bottom = 300.0

[node name="Magin6" type="MarginContainer" parent="MenuConnection/VBox1/HBox2"]
margin_right = 166.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitGame" type="Button" parent="MenuConnection/VBox1/HBox2"]
margin_left = 170.0
margin_right = 290.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Quit"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magin7" type="MarginContainer" parent="MenuConnection/VBox1/HBox2"]
margin_left = 294.0
margin_right = 460.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuLobby" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -177.5
margin_right = 126.0
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="MenuLobby"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="MenuLobby"]
margin_left = 68.0
margin_top = 307.0
margin_right = 193.0
margin_bottom = 336.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="List" type="ItemList" parent="MenuLobby"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
[connection signal="pressed" from="MenuConnection/VBox1/HBox1/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuConnection/VBox1/HBox1/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MenuConnection/VBox1/HBox2/QuitGame" to="MenuConnection/VBox1/HBox2/QuitGame" method="_on_QuitGame_pressed"]
[connection signal="pressed" from="MenuLobby/Start" to="." method="_on_start_pressed"]
